# Build file for the "sirmodels" project.
[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cellmorph"
version = "0.0.1"
description = "Neural cellular automata exploration framework."
readme = "Readme.md"
authors = [
    { name = "Will Knez", email = "wknez@asu.edu" }
]
license-files = [ "License.txt" ]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 :: Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Science/Engineering :: Artificial Intelligence",
    "Topic :: Science/Engineering :: Artificial Life",
    "Topic :: Science/Engineering :: Mathematics",
    "Topic :: Science/Engineering :: Visualization",
]
dependencies = [
    "loguru",
    "numpy",
    "pillow",
    "requests",
    "torch",
    "torchvision",
    "tqdm"
]

[project.optional-dependencies]
animation = [ "ffmpeg", "matplotlib" ]
beam = [ "beam-client" ]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/wbknez/cellmorph"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
  "error",
]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
build-verbosity = 1

[tool.setuptools.packages.find]
where = [ "src" ]

[project.scripts]
cm-train = "cellmorph.app.cm_train:launch"
beam-train = "cellmorph.app.beam_train:launch"
